fix: mat.styl tweak fro range label
fix: mat.styl tweak fro range label

Fixed, mat.styl - vertical alignment of labels too high above disabled
range handles.

--- a/src/vue-components/range/range.mat.styl
+++ b/src/vue-components/range/range.mat.styl
@@ -74,7 +74,7 @@ $range-handle-radius       ?= 50%
     transform translateY(-50%) scale(1)
 
 .quasar-range-handle.undraggable>.quasar-range-label
-  top - $range-handle-size * 2
+  top (- $range-handle-size - ($range-handle-size * 0.75))
 
 .quasar-range-handle
   position absolute
